# emporium

./: .dockerignore  .formatter.exs  .gitattributes  .gitignore  .tool-versions  Procfile  README.md  mix.exs
apps/emporium_environment/: mix.exs
apps/emporium_environment/config/: config.exs  dev.exs  prod.exs
apps/emporium_environment/lib/emporium_environment/: application.ex  endpoint.ex  horde.ex
apps/emporium_inference/: mix.exs
apps/emporium_inference/lib/emporium_inference/: image.ex  image_conversion.ex
apps/emporium_inference_resnet/: mix.exs
apps/emporium_inference_resnet/lib/: emporium_inference_resnet.ex
apps/emporium_inference_resnet/lib/emporium_inference_resnet/: application.ex  serving.ex
apps/emporium_inference_yolov5/: .gitignore  CMakeLists.txt  Makefile  mix.exs
apps/emporium_inference_yolov5/c_src/: runner.cc
apps/emporium_inference_yolov5/lib/: emporium_inference_yolov5.ex
apps/emporium_inference_yolov5/lib/emporium_inference_yolov5/: acceptor.ex  application.ex  broker.ex  request.ex  runner.ex
apps/emporium_inference_yolov5/test/: inference_test.exs
apps/emporium_nexus/: mix.exs
apps/emporium_nexus/config/: config.exs
apps/emporium_proxy/: mix.exs
apps/emporium_proxy/config/: config.exs
apps/emporium_proxy/lib/: emporium_proxy.ex
apps/emporium_web/: .gitignore  mix.exs
apps/emporium_web/assets/: esbuild.js  package-lock.json  package.json
apps/emporium_web/config/: config.exs  dev.exs  prod.exs  test.exs
apps/emporium_web/lib/: emporium_web.ex
config/: config.exs  dev.env.template  dev.exs  test.exs
infra/foreman-app/: console.sh  start.sh  test.sh
rel/: env.sh.eex
(+38 files in other folders)
